Isolated loading task and connector