@@ -45,6 +45,7 @@ import org.apache.rocketmq.connect.runtime.service.PositionManagementService;
 import org.apache.rocketmq.connect.runtime.service.TaskPositionCommitService;
 import org.apache.rocketmq.connect.runtime.store.PositionStorageReaderImpl;
 import org.apache.rocketmq.connect.runtime.utils.Plugin;
+import org.apache.rocketmq.connect.runtime.utils.PluginClassLoader;
 import org.apache.rocketmq.remoting.protocol.LanguageCode;
 
 /**
@@ -152,16 +153,23 @@ public class Worker {
             ConnectKeyValue keyValue = newConnectors.get(connectorName);
             String connectorClass = keyValue.getString(RuntimeConfigDefine.CONNECTOR_CLASS);
             ClassLoader loader = plugin.getPluginClassLoader(connectorClass);
+            final ClassLoader currentThreadLoader = plugin.currentThreadLoader();
             Class clazz;
+            boolean isolationFlag = false;
             if (null != loader) {
-                clazz = Class.forName(connectorClass, true, loader);
+                clazz = ((PluginClassLoader) loader).loadClass(connectorClass, false);
+                isolationFlag = true;
             } else {
                 clazz = Class.forName(connectorClass);
             }
-            Connector connector = (Connector) clazz.newInstance();
+            final Connector connector = (Connector) clazz.getDeclaredConstructor().newInstance();
             WorkerConnector workerConnector = new WorkerConnector(connectorName, connector, connectorConfigs.get(connectorName), new DefaultConnectorContext(connectorName, connectController));
+            if (isolationFlag) {
+                Plugin.compareAndSwapLoaders(loader);
+            }
             workerConnector.initialize();
             workerConnector.start();
+            Plugin.compareAndSwapLoaders(currentThreadLoader);
             this.workingConnectors.add(workerConnector);
         }
     }
@@ -244,17 +252,22 @@ public class Worker {
             for (ConnectKeyValue keyValue : newTasks.get(connectorName)) {
                 String taskClass = keyValue.getString(RuntimeConfigDefine.TASK_CLASS);
                 ClassLoader loader = plugin.getPluginClassLoader(taskClass);
+                final ClassLoader currentThreadLoader = plugin.currentThreadLoader();
                 Class taskClazz;
+                boolean isolationFlag = false;
                 if (null != loader) {
-                    taskClazz = Class.forName(taskClass, true, loader);
+                    taskClazz = ((PluginClassLoader) loader).loadClass(taskClass, false);
+                    isolationFlag = true;
                 } else {
                     taskClazz = Class.forName(taskClass);
                 }
-                Task task = (Task) taskClazz.newInstance();
+                final Task task = (Task) taskClazz.getDeclaredConstructor().newInstance();
 
                 Class converterClazz = Class.forName(keyValue.getString(RuntimeConfigDefine.SOURCE_RECORD_CONVERTER));
                 Converter recordConverter = (Converter) converterClazz.newInstance();
-
+                if (isolationFlag) {
+                    Plugin.compareAndSwapLoaders(loader);
+                }
                 if (task instanceof SourceTask) {
                     DefaultMQProducer producer = new DefaultMQProducer();
                     producer.setNamesrvAddr(keyValue.getString(RuntimeConfigDefine.NAMESRV_ADDR));
@@ -274,6 +287,7 @@ public class Worker {
                     WorkerSourceTask workerSourceTask = new WorkerSourceTask(connectorName,
                         (SourceTask) task, keyValue,
                         new PositionStorageReaderImpl(positionManagementService), recordConverter, producer);
+                    Plugin.compareAndSwapLoaders(currentThreadLoader);
                     this.taskExecutor.submit(workerSourceTask);
                     this.workingTasks.add(workerSourceTask);
                 } else if (task instanceof SinkTask) {
@@ -291,6 +305,7 @@ public class Worker {
                     }
 
                     WorkerSinkTask workerSinkTask = new WorkerSinkTask(connectorName, (SinkTask) task, keyValue, new PositionStorageReaderImpl(offsetManagementService), recordConverter, consumer);
+                    Plugin.compareAndSwapLoaders(currentThreadLoader);
                     this.taskExecutor.submit(workerSinkTask);
                     this.workingTasks.add(workerSinkTask);
                 }
